--- a/css/style.css
+++ b/css/style.css
@@ -4,23 +4,50 @@ padding: 0;
 box-sizing:border-box;
 }
 
-.logo {
-    font-size: 2.5rem;
-}
-
-.color_header {
-background-color: #2B3A67
-
-}
 
 /*===Video de Fondo===*/
 .video-bg {
-    display: none;
+position: fixed;
+top: 0;
+left: 0;
+min-width: 100%;
+z-index: -1;
+object-fit: cover;
+display: block;
 }
 
-.carouselEspecial {
-    height: 10%;
+/* Logo y Fuentes*/
+.logo {
+    font-size: 3rem;
+    font-weight: 800;
+    font-family: 'Montserrat', sans-serif;
 }
+
+/* Header */
+.her-header {
+    background: rgba (0,0,0,0.5); /*transparente*/
+    backdrop-filter: blur(5px);
+    position: relative;
+    z-index: 2;
+}
+
+/* Buscador */
+form input[type="search"] {
+    max-width: 400px;
+} 
+
+/*Loader*/
+#loader {
+    position: fixed;
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+}
+
+/* Colores Base */
 
 :root {
     --color-azul-urbano: #2B3A67;
@@ -38,6 +65,20 @@ body {
 
 h1,h2,nav,a{
     font-family: 'monstserrat', sans-serif;
+}
+
+a, .btn-primary {
+    background-color: var(--color-verde-ruta);
+    color: var(--color-blanco-niebla);
+}
+
+a:hover, .btn-primary:hover {
+    background-color: #3C5F44;
+}
+
+.card {
+    background-color: #1C1C1C;
+    border-color: var(--color-gris-viento);
 }
 
 nav {
